Fixed bug where color inputs in theme creator/editor were too small (fixing #429)

--- a/client/src/components/UI/Forms/InputGroup/InputGroup.module.css
+++ b/client/src/components/UI/Forms/InputGroup/InputGroup.module.css
@@ -40,5 +40,11 @@
 }
 
 .InputGroup input[type='color'] {
-  all: unset;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+.InputGroup input[type='color']:hover {
+  cursor: pointer;
 }
